manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: stock-ticker
  labels: 
    name: stock-ticker
