manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-ticker-service
  namespace: stock-ticker
spec:
  type: ClusterIP
  selector:
    app: stock-ticker
  ports:
  - name: port8080
    protocol: TCP
    port: 8080
    targetPort: 8080
