manifests/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stock-ticker-ingress
  namespace: stock-ticker
spec:
  ingressClassName: nginx
  rules:
    - host: stock-ticker.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stock-ticker-service
                port:
                  number: 8080
